Fixes vertical sprite alignment

--- a/javascript/examples/grapheditor/www/styles/grapheditor.css
+++ b/javascript/examples/grapheditor/www/styles/grapheditor.css
@@ -413,7 +413,7 @@
 .geSprite-actualsize { background-position: 0 0; }
 .geSprite-bold { background-position: 0 -46px; }
 .geSprite-bottom { background-position: 0 -92px; }
-.geSprite-center { background-position: 0 -139px; }
+.geSprite-center { background-position: 0 -138px; }
 .geSprite-delete { background-position: 0 -184px; }
 .geSprite-fillcolor { background-position: 0 -230px; }
 .geSprite-fit { background-position: 0 -277px; }
@@ -421,11 +421,11 @@
 .geSprite-gradientcolor { background-position: 0 -368px; }
 .geSprite-image { background-position: 0 -414px; }
 .geSprite-italic { background-position: 0 -460px; }
-.geSprite-left { background-position: 0 -506px; }
+.geSprite-left { background-position: 0 -505px; }
 .geSprite-middle { background-position: 0 -552px; }
 .geSprite-print { background-position: 0 -598px; }
 .geSprite-redo { background-position: 0 -644px; }
-.geSprite-right { background-position: 0 -690px; }
+.geSprite-right { background-position: 0 -689px; }
 .geSprite-shadow { background-position: 0 -736px; }
 .geSprite-strokecolor { background-position: 0 -782px; }
 .geSprite-top { background-position: 0 -828px; }
